# 631-parallel-group-project

./: .gitignore  CMakeLists.txt  Makefile  Notes.md  blobs_dataset_32.txt  circles_dataset.txt  cuda_notes.md  main.cpp  main_wtimers.cpp  omp_notes.md  omp_script.sh  omp_timing.txt  omp_timing_all_5h300.txt  omp_timing_batching_5h300.txt  omp_timing_blockmm_5h300.txt  omp_timing_nadd_5h300.txt  omp_timing_nmm_5h300.txt  omp_timing_no_add.txt  serial_nn.cpp
FinalReport/: 631-Final.tex  Analysis.tex  Conclusion.tex  Conclusions.tex  Introduction.tex  Methodology.tex  Results.tex  bibliography.bib  cvpr.cls  graph.py
FinalReport/Images/: spectrograms
Proposal/: Makefile  Proposal.tex  feedback  references.bib
cuda_code/: Makefile  Makefile.luis  cuda_math.cu  cuda_math.h  main.cpp  math_funcs.cpp  math_funcs.h  moons_dataset.txt  nn.cpp  nn.h  sequential.cpp  sequential.h  types.h  utils.cpp  utils.h
datasets/: blobs_dataset.txt
include/: cuda_math.h  math_funcs.h  nn.h  sequential.h  types.h  utils.h
slides/: CUDA.tex  CodeProfiling.tex  GradientDescent.tex  NextSteps.tex  OMP.tex  Performance.tex  Slides.tex  WhatIsMLP.tex  omp_timing_all.txt  omp_timing_no_matrix.txt
src/: cuda_math.cu  math_funcs.cpp  nn.cpp  sequential.cpp  utils.cpp
